# mlpotential

./: LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt
script/: gen_data.py  model_init.py  plot.py
script/datagen/: datagen_compute.py  datagen_create.py  sub_del.sh  sub_sequence.py
script/eval/: eval_charge_batch.py  eval_charge_csv.py  eval_deshaw.py  eval_distribution.py  eval_energy_batch.py  eval_energy_csv.py  eval_mlxdm_batch.py  eval_mlxdm_csv.py
script/sub/: sub.sh  sub_orca.sh
script/train/: charge_data_change.py  charge_mean_adjust.py  combine_ensemble.py  combine_mlxdm.py  train_charge.py  train_energy.py  train_force.py  train_xdm.py
src/mlpotential/: __init__.py  charge.py  combine.py  dataloader.py  dispersion.py  net.py  sf.py  utils.py
