[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "mlpotential"
version = "0.0.1"
dependencies = [
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "torch>=2.4.0",
    "h5py>=3.11.0",
    "scikit-learn>=1.5.1",
    "tqdm>=4.66.4",
]
requires-python = ">=3.9"
authors = [
    {name = "Nguyen Thien Phuc Tu", email="phuctu@cmail.carleton.ca"},
]
description = ""
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["machine learning", "MLP"]

[tool.setuptools]
package-dir = {"" = "src"}